added searching
