# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/actor-add": {
+        "/v1/actor-add": {
             "post": {
                 "description": "Adds a new actor with the given details",
                 "consumes": [
@@ -38,19 +38,19 @@
                     "400": {
                         "description": "Invalid request body",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.Actor"
                         }
                     },
                     "500": {
                         "description": "Error creating actor",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.Actor"
                         }
                     }
                 }
             }
         },
-        "/actor-delete/{id}": {
+        "/v1/actor-delete/{id}": {
             "delete": {
                 "description": "Deletes the actor with the specified ID, including removing all associated movies",
                 "produces": [
@@ -91,7 +91,7 @@
                 }
             }
         },
-        "/actor-edit/{id}": {
+        "/v1/actor-edit/{id}": {
             "put": {
                 "description": "Edits an actor with the specified ID based on the given update fields",
                 "consumes": [
@@ -133,25 +133,25 @@
                     "400": {
                         "description": "Invalid request body or actor ID",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.Actor"
                         }
                     },
                     "404": {
                         "description": "Actor not found",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.Actor"
                         }
                     },
                     "500": {
                         "description": "Failed to save actor",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.Actor"
                         }
                     }
                 }
             }
         },
-        "/actor-list": {
+        "/v1/actor-list": {
             "get": {
                 "description": "Retrieves a list of all actors, including their associated movies",
                 "produces": [
@@ -174,13 +174,16 @@
                     "500": {
                         "description": "Error retrieving actors",
                         "schema": {
-                            "type": "string"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Actor"
+                            }
                         }
                     }
                 }
             }
         },
-        "/login": {
+        "/v1/login": {
             "post": {
                 "description": "handles login requests by checking username and password",
                 "consumes": [
@@ -217,7 +220,7 @@
                 }
             }
         },
-        "/movie-add": {
+        "/v1/movie-add": {
             "post": {
                 "description": "Adds a new movie with the given details including title, description, release date, and rating",
                 "consumes": [
@@ -251,19 +254,19 @@
                     "400": {
                         "description": "Invalid request body",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.Movie"
                         }
                     },
                     "500": {
                         "description": "Error creating movie",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.Movie"
                         }
                     }
                 }
             }
         },
-        "/movie-delete/{id}": {
+        "/v1/movie-delete/{id}": {
             "delete": {
                 "description": "Deletes the movie with the specified ID, including removing all associations with actors",
                 "produces": [
@@ -304,7 +307,7 @@
                 }
             }
         },
-        "/movie-edit/{id}": {
+        "/v1/movie-edit/{id}": {
             "put": {
                 "description": "Edits a movie with the specified ID based on the given update fields such as title, description, release date, rating, and associated actors",
                 "consumes": [
@@ -346,25 +349,80 @@
                     "400": {
                         "description": "Invalid request body or movie ID",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.Movie"
                         }
                     },
                     "404": {
                         "description": "Movie not found",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.Movie"
                         }
                     },
                     "500": {
                         "description": "Error saving movie",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.Movie"
                         }
                     }
                 }
             }
         },
-        "/movie-list": {
+        "/v1/movie-find": {
+            "get": {
+                "description": "Searches for movies by a fragment of the title or by a fragment of an actor's name",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "movie"
+                ],
+                "summary": "Searches for movies by title or actor name",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Fragment of the movie title",
+                        "name": "title",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Fragment of the actor's name",
+                        "name": "actor",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successfully found movies",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Movie"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid query parameters",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Movie"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Error retrieving movie list",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Movie"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/movie-list": {
             "get": {
                 "description": "Retrieves a list of all movies, including their titles, descriptions, release dates, ratings, and associated actors with sorting.",
                 "produces": [
@@ -395,7 +453,10 @@
                     "500": {
                         "description": "Error retrieving movie list",
                         "schema": {
-                            "type": "string"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Movie"
+                            }
                         }
                     }
                 }
